# mycloudx

./: .dockerignore  .gitignore  AGENT.md  README.md  current-task.md
.agent/skills/design-system/: SKILL.md
.agent/skills/sqlite-sqlx-patterns/: SKILL.md
.agent/workflows/: add-page.md  add-route.md  build.md  dev.md  modify-schema.md  reset-db.md  task-tracking.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20260322100000_init.sql  20260328100000_create_jobs.sql  20260330100000_geo_index.sql  20260403_encryption_support.sql  20260404000000_update_quota_1tb.sql  20260404100000_share_encryption.sql  20260404200000_album_collaborators.sql  20260404210000_album_collab_mk.sql
backend/src/: config.rs  crypto.rs  error.rs  jobs.rs  main.rs  metrics.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/db/: mod.rs  schema.rs  seed.rs
backend/src/imaging/: exif.rs  job_queue.rs  mod.rs  thumbnail.rs
backend/src/models/: album.rs  album_collaborator.rs  media.rs  mod.rs  mosaic.rs  notification.rs  shared_link.rs  upload_session.rs  user.rs
backend/src/routes/: admin.rs  album.rs  auth.rs  encryption.rs  explorer.rs  health.rs  media.rs  mod.rs  mosaic.rs  notification.rs  search.rs  share.rs  upload.rs  user.rs
backend/src/storage/: cloudstore.rs  local.rs  mod.rs
cloud-store/: .dockerignore  .gitignore  AGENT.md  API.md  Cargo.toml  Dockerfile  build.bat  docker-compose.yml  init.bat
cloud-store/crates/cloudstore-api/: Cargo.toml
cloud-store/crates/cloudstore-api/src/: error.rs  main.rs  metrics.rs  state.rs
cloud-store/crates/cloudstore-api/src/middleware/: auth.rs
cloud-store/crates/cloudstore-api/src/routes/: auth.rs  dashboard.rs  files.rs  health.rs  mod.rs
cloud-store/crates/cloudstore-cache/: Cargo.toml
cloud-store/crates/cloudstore-cache/src/: cleaner.rs  engine.rs  hasher.rs  index.rs  lib.rs
cloud-store/crates/cloudstore-common/: Cargo.toml
cloud-store/crates/cloudstore-common/src/: errors.rs  types.rs
cloud-store/crates/cloudstore-sync/: Cargo.toml
cloud-store/crates/cloudstore-sync/src/: lib.rs  queue.rs  retry.rs  worker.rs
cloud-store/crates/cloudstore-sync/src/providers/: gdrive.rs  mod.rs
frontend/: index.html  package.json  tailwind.config.js  test.css  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/gallery/: AlbumModal.tsx  BlurHashCanvas.tsx  GalleryHeader.tsx  Lightbox.tsx  MediaTile.tsx  PhotoTile.tsx  SelectionActionBar.tsx  ShareModal.tsx  VideoPlayer.tsx  ViewModeToggle.tsx  VirtualizedMediaGrid.tsx
frontend/src/components/layout/: AccountMenu.tsx  BottomNav.tsx  Header.tsx  Layout.tsx  NotificationsMenu.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/components/pwa/: ReloadPrompt.tsx
frontend/src/components/ui/: Skeleton.tsx
frontend/src/components/upload/: GlobalUploadModal.tsx
frontend/src/contexts/: ConfirmContext.tsx
frontend/src/hooks/: useMediaData.ts  useMediaSelection.ts
frontend/src/pages/: Admin.tsx  AlbumDetail.tsx  Albums.tsx  Dashboard.tsx  Explorer.tsx  Favorites.tsx  Gallery.tsx  Login.tsx  Map.tsx  Mosaic.tsx  PublicShare.tsx  Register.tsx  Settings.tsx  SharedLinks.tsx  Trash.tsx
