[package]
name = "mycloud"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database - SQLite via sqlx
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# Image processing
image = { version = "0.25", features = ["webp"] }
fast_image_resize = "3.0"
webp = "0.3"
blurhash = "0.2"
kamadak-exif = "0.6"

# Embed frontend static files
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
async-trait = "0.1"
urlencoding = "2"
sysinfo = "0.30"

# TLS (for scratch image)
webpki-roots = "0.26"

# HTTP client (for CloudStore provider)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
zune-jpeg = "0.4"
mozjpeg = "0.10"
bytes = "1.11.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
