[package]
name = "cloudstore-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloudstore-api"
path = "src/main.rs"

[dependencies]
cloudstore-common = { workspace = true }
cloudstore-cache = { workspace = true }
cloudstore-sync = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }
async-trait = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
bytes = { workspace = true }
urlencoding = { workspace = true }
