[package]
name = "cloudstore-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cloudstore-api"
path = "src/main.rs"

[dependencies]
cloudstore-common = { workspace = true }
cloudstore-cache = { workspace = true }
cloudstore-sync = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
bytesize = { workspace = true }
async-trait = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-util = { workspace = true }
bytes = { workspace = true }
urlencoding = { workspace = true }
tokio-stream = "0.1.18"
futures-util.workspace = true
chacha20 = "0.10"
cipher = "0.4"
hex = "0.4.3"
rand = "0.8"
sha2.workspace = true
